--- a/styles.css
+++ b/styles.css
@@ -713,6 +713,8 @@ footer {
     color: #FFB800;
     font-size: 16px;
     z-index: 5;
+    text-align: center;
+    width: 100%;
 }
 
 .game-modal.loaded::before,
